# second-brain

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING.md  PROJECT_STATUS.md  README.md  TESTING.md  node_modules  package.json  server.mjs
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  feature.md  feature_request.md  refactor.md
.github/workflows/: pages.yml  release.yml
docs/: INDEX.md  architecture.md  config.example.env  config.example.json  data-model.md  design-upgrade.md  index.html
docs/.index/: freshness.json  manifest.json  relations.json
docs/architecture/: agent.md  backend.md  database.md  deploy.md  frontend.md  security.md  system.md
docs/decisions/: 0001-tauri-strategy.md  0002-llm-strategy.md  0003-repo-strategy.md  0004-data-schema.md  0005-ui-strategy.md  0006-agent-protocol.md  0007-flat-structure.md  0008-llm-config.md  0009-real-llm-agent.md
docs/product/: roadmap.md  (+1 more)
lib/: agent.mjs  daily.mjs  eventstore.mjs  frontmatter.mjs  fswatcher.mjs  graph.mjs  linkfetch.mjs  mcp-prompts.mjs  mcp-resources.mjs  mcp.mjs  sanitize.mjs  server.mjs  skills.mjs  vault.mjs  weekly.mjs
memory/: architecture-memory.md  decisions.md  lessons.md  project-memory.md
public/: app.js  index.html  style.css
recordings/: e2e-demo.mjs
sessions/: current-session.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: agent.test.mjs  cockpit-activity.test.mjs  graph.test.mjs  llm-config.test.mjs  mcp.test.mjs  sanitize.test.mjs
(+138 files in other folders)
