[package]
name = "second-brain"
version = "0.8.0-alpha"
description = "Second Brain OS — local-first Personal Cognitive Operating System"
authors = ["lora"]
license = "MIT"
repository = "https://github.com/lora-sys/second-brain"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "second_brain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "second-brain"
path = "src/main.rs"
